--- a/style.css
+++ b/style.css
@@ -202,25 +202,22 @@ a.my-button:active {
     width: 40%;   
 }
 
-/* .txt-img img {
-    border-radius: 25px;
-    height: auto;
-    width: 40%;
-} */
-
 .txt {
-    background-color: red;
-    margin: 15px;
+    /* background-color: red; */
+    /* margin: 15px; */
     display: flex;
+    width: 60%;
+    height: 90%;
+    padding: 20px;
     flex-direction: column;
-    /* align-self: center; */
+    justify-content: center;
 }
 
 .txt h3 {
     font-weight: 600;
     font-size: 3vw;
     color: #262626;
-    margin: 10px;
+    /* margin: 10px; */
     align-self: center;
 }
 
@@ -232,19 +229,19 @@ a.my-button:active {
     align-self: center;
 }
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     .windows-about {
         display: flex;
         background-color: #b7b7b7ff;
-        height: 195vh;
+        height: 95vh;
         width: 95vw;
         border-radius: 25px;
         flex-direction: column;
     }
 
     .about {
-        height: 200vh;
+        height: 100vh;
         display: flex;
     }
 
@@ -256,28 +253,48 @@ a.my-button:active {
 
     .txt-img {
         display: flex;
-        background-color: #fff;
-        height: 90%;
-        width: 90%;
+        /* background-color: #fff; */
+        height: 70%;
+        width: 85%;
+        align-items: center;
         flex-direction: column;
-
+        /* margin: auto; */
     }
-
-    img {
-        height: 60vh;
-        width: 60vw;
+    
+    .img {
+        background-image: url('asset/portrait.jpg');
+        background-size: cover;
+        background-position: top;
         border-radius: 25px;
-        margin: 15px;
+        height: 50%;
+        width: 50%;   
     }
-
-    .txt {
+    
+    /* .txt {
         background-color: red;
-        margin: 20px 20px;
         display: flex;
+        width: 60%;
+        height: 90%;
+        padding: 20px;
         flex-direction: column;
+        justify-content: center;
+    }
+    
+    .txt h3 {
+        font-weight: 600;
+        font-size: 3vw;
+        color: #262626;
+        align-self: center;
+    }
+    
+    .txt P {
+        font-family: 'Clash Display', sans-serif;
+        font-weight: 400;
+        font-size: 2vw;
+        color: #262626;
         align-self: center;
     } */
-
+}
 /* @media screen and (max-width: 1024px) {
     .txt-img {
         display: flex;
@@ -294,26 +311,6 @@ a.my-button:active {
     }
 
 } */
-
-
-
-
-/* 
-    .txt h3 {
-        font-weight: 200;
-        font-size: 6vw;
-        color: #262626;
-        align-self: center;
-    }
-
-    .txt P {
-        font-family: 'Clash Display', sans-serif;
-        font-weight: 400;
-        font-size: 2.3vw;
-        color: #262626;
-        align-self: center;
-    } */
-/* } */
 
 /* @media screen and (max-width: 530px) {
     .txt-img {
